--- a/finalproject/app/src/main/AndroidManifest.xml
+++ b/finalproject/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
             android:name=".SettingsActivity"
             android:parentActivityName=".MainActivity" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.NoActionBar">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
