--- a/finalproject/app/build.gradle
+++ b/finalproject/app/build.gradle
@@ -18,7 +18,6 @@ android {
         }
     }
 }
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -38,6 +37,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     annotationProcessor 'androidx.room:room-compiler:2.2.4'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0'
@@ -46,4 +46,5 @@ dependencies {
     implementation "com.android.support:support-v13:28.0.0"
     implementation "com.android.support:cardview-v7:28.0.0"
     implementation "com.android.support:appcompat-v7:28.0.0"
+
 }
